@@ -305,6 +305,10 @@
 	Fixed registers' content of multiple instances not being synchronized on
 	use of %"r macro.
 
+	Fixed a crash after a memory corruption when running an external command
+	via expansion of an environment variable when 'fastrun' is set (e.g.,
+	`!$EDITOR`).  Thanks to Quaddroo.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
